# notebook-fossil-test

./: README.md  meson.build
.github/workflows/: meson_ci.yml
notebook/: meson.build
notebook/logic/: meson.build  output_sample.c  output_sample.cpp
notebook/tasks/: meson.build
notebook/tools/: basename.py  runner.py  wildcard.py
subprojects/: fossil-io.wrap
